--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -82,7 +82,7 @@ h6 { font-size: 16px; }
 h1,h2,h3,h4,h5,h6{ margin-bottom: 0.3em; margin-top: 0; font-family: "Montserrat", Arial, sans-serif; color:#222; font-weight: 400;}
 /* Link */
 a, a > * {
-	color: #4d90fe;
+	color: #66CCFF; /* #4d90fe; */
 	text-decoration: none;
 	-webkit-transition: background-color .2s ease, border .2s ease, color .2s ease, opacity .2s ease-in-out;
 	   -moz-transition: background-color .2s ease, border .2s ease, color .2s ease, opacity .2s ease-in-out;
@@ -91,14 +91,14 @@ a, a > * {
 	        transition: background-color .2s ease, border .2s ease, color .2s ease, opacity .2s ease-in-out;
 }
 
-a:hover, a > *:hover { color: #333; text-decoration: underline; }
+a:hover, a > *:hover { color: #CC0000; }
 
 h1 a:hover,
 h2 a:hover,
 h3 a:hover,
 h4 a:hover,
 h5 a:hover {
-	color: #000;
+	color: #CC0000;
 }
 
 /* Text elements */
