--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -79,7 +79,7 @@ h3 { font-size: 24px; }
 h4 { font-size: 20px; }
 h5 { font-size: 18px; }
 h6 { font-size: 16px; }
-h1,h2,h3,h4,h5,h6{ margin-bottom: 0.3em; margin-top: 0; font-family: "Montserrat", Arial, sans-serif; color:#222; font-weight: 400;}
+h1,h2,h3,h4,h5,h6{ margin-bottom: 0.3em; margin-top: 0; font-family: "Montserrat", Arial, sans-serif; color:#222; font-weight: 400; padding-top: 15px;}
 /* Link */
 a, a > * {
 	color: #66CCFF; /* #4d90fe; */
@@ -104,7 +104,7 @@ h5 a:hover {
 /* Text elements */
 
 p {
-	margin-bottom: 1.5em;
+	margin-bottom: 1.3em;
 }
 
 img{
