--- a/assets/css/flexslider.css
+++ b/assets/css/flexslider.css
@@ -27,7 +27,7 @@
 	font-family: 'flexslider-icon';
 	src:url('font/flexslider/flexslider-icon.eot');
 	src:url('font/flexslider/flexslider-icon.eot?#iefix') format('embedded-opentype'),
-		url('font/flexslider/flexslider-icon.woff') format('woff'),
+		url('font/flexslider-icon.woff') format('woff'),
 		url('font/flexslider/flexslider-icon.ttf') format('truetype'),
 		url('font/flexslider/flexslider-icon.svg#flexslider-icon') format('svg');
 	font-weight: normal;
@@ -61,7 +61,7 @@ html[xmlns] .slides {display: block;}
 
 /* Direction Nav */
 .flex-direction-nav {*height: 0;}
-.flex-direction-nav a  { display: block; width: 40px; height: 60px; margin: -20px 0 0; position: absolute; top: 50%; z-index: 10; overflow: hidden; opacity: 0; cursor: pointer; color: rgba(0,0,0,0.8); text-shadow: 1px 1px 0 rgba(255,255,255,0.3); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; transition: all .3s ease; }
+.flex-direction-nav a  { text-decoration:none; display: block; width: 40px; height: 40px; margin: -20px 0 0; position: absolute; top: 50%; z-index: 10; overflow: hidden; opacity: 0; cursor: pointer; color: rgba(0,0,0,0.8); text-shadow: 1px 1px 0 rgba(255,255,255,0.3); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; transition: all .3s ease; }
 .flex-direction-nav .flex-prev { left: -50px; }
 .flex-direction-nav .flex-next { right: -50px; text-align: right; }
 .flexslider:hover .flex-prev { opacity: 0.7; left: 10px; }
