Fixed space ul tag marker after p tag

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -829,6 +829,8 @@ time:hover {
 	margin-left: 15px;
 }
 
+.entry-content p + ul, .entry-content p + ol, .entry-content p + dl { margin-top: -12px }
+
 /* Blog and Post Archive */
 .archive-title{
 	font-size: 1.5em;
